@@ -124,34 +124,9 @@ namespace Rivet {
       // If this is a null vector, return zero rather than let atan2 set an error state
       if (Rivet::isZero(mod2())) return 0.0;
 
-      // Calculate the arctan and correct for numerical boundary cases
-      double value = atan2( y(), x() );
-      if (value > 2*PI || value < -2*PI){
-        value = fmod(value, 2*PI);
-      }
-      if (value <= -PI) value += 2*PI;
-      if (value >   PI) value -= 2*PI;
-
-      // Return in the requested range
-      switch (mapping) {
-      case MINUSPI_PLUSPI:
-        assert(value > -PI && value <= PI);
-        return value;
-      case ZERO_2PI:
-        if (value >= 0) {
-          assert(value >= 0 && value < 2*PI);
-          return value;
-        } else if (Rivet::isZero(value)) {
-          value = 0.0;
-          return value;
-        } else {
-          value = 2*PI + value;
-          assert(value >= 0 && value < 2*PI);
-          return value;
-        }
-      default:
-        throw std::runtime_error("The specified phi mapping scheme is not yet implemented");
-      }
+      // Calculate the arctan and return in the requested range
+      const double value = atan2( y(), x() );
+      return mapAngle(value, mapping);
     }
 
     /// Synonym for azimuthalAngle.
@@ -162,9 +137,8 @@ namespace Rivet {
     /// Angle subtended by the vector and the z-axis.
     double polarAngle() const {
       // Get number beween [0,PI]
-      double polarangle = atan2(polarRadius(), z());
-      assert(polarangle >= -PI && polarangle <= PI);
-      return polarangle;
+      const double polarangle = atan2(polarRadius(), z());
+      return mapAngle0ToPi(polarangle);
     }
 
     /// Synonym for polarAngle
